--- a/app/CoreFacturalo/Templates/pdf/default/style.css
+++ b/app/CoreFacturalo/Templates/pdf/default/style.css
@@ -614,8 +614,9 @@ p {
 .img_producto_box {
 display: flex;
     justify-content: center;
+    justify-items: center;
 }
 .img_producto {
-    width:1cm !important;
-     height:1cm !important;
+    width:3cm !important;
+     height:3cm !important;
 }
